# pso

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
src/pso/: __init__.py  optimizer.py  pso.py
tests/: draft.py  test_pso.py
