[metadata]
name = pso
version = 0.2.0
description = particle swarm optimization
author = Leonardo Fonseca Reginato
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages =
    pso
install_requires =
    matplotlib>=3.8.0
    numpy>=1.26.0
    pandas>=2.2.0
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=8.0
    pytest-cov>=4.0
    mypy>=1.8.0
    flake8>=3.9
    tox>=4.13.0

[options.package_data]
pso = py.typed

[flake8]
max-line-length = 160